<resources>
    <string name="app_name">ShoppingListCompare</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--EditText-->
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="price">Price</string>

    <!--Button-->
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="save">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="preview">Preview</string>

    <!--Error-->
    <string name="NoTitleError">Enter title to continue</string>

    <!--bundle-->
    <string name="bundleGetTitle">BundleTitle</string>
    <string name="bundleShopListViewModel">BundleShopList</string>
    <string name="bundleListDetails">BundleListDetails</string>
</resources>
