<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.kavsoftware.kaveer.shoppinglistcompare.Fragment.ListNameAddFragment"
              tools:layout_editor_absoluteY="81dp">

    <!-- TODO: Update blank fragment layout -->


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="458dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="384dp"
                android:layout_height="61dp"
                android:textColorHint="#ffff"
                tools:layout_editor_absoluteY="24dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="384dp"
                android:layout_height="wrap_content"
                android:textColorHint="#ffff"
                tools:layout_editor_absoluteY="108dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/date"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addTitleCancelButton"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:background="@drawable/gradient_background_royal_blue"
                android:maxLines="2"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/addTitleOkButton"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/gradient_background_royal_blue"
                android:filterTouchesWhenObscured="true"
                android:maxLines="2"
                android:text="@string/next"
                android:textColor="@color/colorAccent"/>

        </TableRow>

    </TableLayout>

</LinearLayout>
