<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.kavsoftware.kaveer.shoppinglistcompare.Fragment.ListAddPriceFragment"
                                             tools:layout_editor_absoluteY="81dp">


    <AutoCompleteTextView
        android:id="@+id/addGrocery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textColor="@color/colorAccent"/>
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerStore"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

    <LinearLayout
        android:id="@+id/linearLayoutAdd"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="vertical"
        android:paddingTop="16dip"
        android:showDividers="beginning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/leftSpacerAdd"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone"/>

            <Button
                android:id="@+id/addPriceAdd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:maxLines="2"
                android:text="@string/add"/>

            <LinearLayout
                android:id="@+id/rightSpacerAdd"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:divider="?android:attr/dividerHorizontal"
        android:orientation="vertical"
        android:paddingTop="16dip"
        android:showDividers="beginning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/leftSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone"/>

            <Button
                android:id="@+id/addPricePreviousButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/addPriceSaveButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:maxLines="2"
                android:text="@string/save"/>

            <LinearLayout
                android:id="@+id/rightSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone"/>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
